--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,6 +11,7 @@
     width: 100vw;
     background-color: black;
  }
+
  body{
     background-image: url('../imagens/fundo-madeira.jpg');
     background-repeat: no-repeat;
@@ -21,8 +22,7 @@
 
  main{
     position: relative;
-    height: 100vh;
-    
+    height: 100vh; 
  }
 
  section#telefone{
@@ -35,5 +35,12 @@
     background-image: url(../imagens/frame-iphone.png);
     background-repeat: no-repeat;
     background-position: center center;
-    
+ }
+
+ iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+     height: 471px;
  }
