--- a/estilos/style.css
+++ b/estilos/style.css
@@ -58,10 +58,14 @@
     box-sizing: border-box;
  }
 
- section#redes-sociais img:hover{
+ section#redes-sociais img:hover{   /* efeitos para o botão se movimentar ao passar o mouse */
     border: 2px solid rgba(255, 255, 255, 0.600);
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.600);
     transition: transform 0.5s, border 1s;
 
  }
+
+ section#redes-sociais img:active {  /* efeito para o botão afundar ao clicar */
+    transform: scale(95%);
+}
